--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green">#4CAF50</color>
+    <color name="sky_blue">#03A9F4</color>
+    <color name="darkBG">#362D46</color>
 </resources>
